add tabsize in vscode settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -18,4 +18,5 @@
   "workbench.settings.openDefaultKeybindings": true,
   "editor.autoClosingQuotes": "always",
   "editor.autoClosingBrackets": "always",
+  "editor.tabSize": 2,
 }
